fixed overlapping navbar bug

--- a/app/assets/stylesheets/main/navbar.scss
+++ b/app/assets/stylesheets/main/navbar.scss
@@ -173,20 +173,6 @@ a.article:hover {
     color: #fff !important;
 }
 
-/* ---------------------------------------------------
-    CONTENT STYLE
------------------------------------------------------ */
-
-#content {
-    width: 100%;
-    padding: 20px;
-    min-height: 100vh;
-    transition: all 0.3s;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
 .navbar-logo {
   width: 100px;
   height: 100px;
